[package]
name = "armrest"
version = "0.1.0"
authors = ["Ben Kirwin <ben@kirw.in>"]
edition = "2018"

[dependencies]
#libremarkable = { path = "../libremarkable", default-features = false, features = ['framebuffer']}
libremarkable = { git = "https://github.com/canselcik/libremarkable", rev = "31c4ac7326f2f714fc1fe1499b0f4c8d11c35c3e", default-features = false, features = ['framebuffer'] }

#tflite = { path = "../tflite-rs" }
tflite = { git = "https://github.com/bkirwi/tflite-rs", rev = "7d5a0d8a51378313dbe017c32299a51e002c06b5" }
flo_curves = "0.4.1"
lyon_geom = "0.17.0"
partial_sort = "0.1.2"
rusttype = "0.8.2"
textwrap = "0.13.4"
itertools = "0.10.0"
strsim = "0.10.0"
image = "0.23.14"

[dev-dependencies]
lazy_static = "1.4.0"

[dependencies.hyphenation]
version = "0.8.0"
features = ["embed_en-us"]
