[package]
name = "armrest"
version = "0.1.0"
authors = ["Ben Kirwin <ben@kirw.in>"]
edition = "2018"

[dependencies]
#libremarkable = { path = "../libremarkable", default-features = false, features = ['framebuffer']}
libremarkable = { git = "https://github.com/canselcik/libremarkable", rev = "b19bf2d5431f00f867905113ec761bd92439995d", default-features = false, features = ['framebuffer'] }

#tflite = { path = "../tflite-rs" }
tflite = { git = "https://github.com/bkirwi/tflite-rs", rev = "4212a1bf33ebbcbf535b162cc591d46c7d054d92" }
flo_curves = "0.4.1"
lyon_geom = "0.17.0"
partial_sort = "0.1.2"
rusttype = "0.8.2"
textwrap = "0.13.4"
itertools = "0.10.0"
strsim = "0.10.0"
image = "0.23.14"
serde = "1.0.136"
cgmath = { version = "0.18.0" }

[dev-dependencies]
lazy_static = "1.4.0"
once_cell = "1.9.0"
serde_json = "1.0.78"
xdg = "^2.1"

[dependencies.hyphenation]
version = "0.8.0"
features = ["embed_en-us"]
